--- a/MyShop/MyShop.Data.SQL/MyShop.Data.SQL.csproj
+++ b/MyShop/MyShop.Data.SQL/MyShop.Data.SQL.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Migrations\202109030936380_Init.designer.cs">
       <DependentUpon>202109030936380_Init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202109041107333_AddedBasketModels.cs" />
+    <Compile Include="Migrations\202109041107333_AddedBasketModels.designer.cs">
+      <DependentUpon>202109041107333_AddedBasketModels.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -75,6 +79,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202109030936380_Init.resx">
       <DependentUpon>202109030936380_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109041107333_AddedBasketModels.resx">
+      <DependentUpon>202109041107333_AddedBasketModels.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
