--- a/MyShop/MyShop.Data.SQL/MyShop.Data.SQL.csproj
+++ b/MyShop/MyShop.Data.SQL/MyShop.Data.SQL.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\202109041107333_AddedBasketModels.designer.cs">
       <DependentUpon>202109041107333_AddedBasketModels.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202109130122323_addedCustomersTable.cs" />
+    <Compile Include="Migrations\202109130122323_addedCustomersTable.designer.cs">
+      <DependentUpon>202109130122323_addedCustomersTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -82,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202109041107333_AddedBasketModels.resx">
       <DependentUpon>202109041107333_AddedBasketModels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109130122323_addedCustomersTable.resx">
+      <DependentUpon>202109130122323_addedCustomersTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
